Fix alignment issues caused by post highlighted image missing

--- a/sass/layout/layout.scss
+++ b/sass/layout/layout.scss
@@ -13,6 +13,16 @@
 	margin-right:5%;
 	margin-left:5%;
 }
+
+.entry-content {
+	background-color:$color__camellia-white;
+	position: relative;
+	padding: 0 2%;
+	width:90%;
+	margin-right:5%;
+	margin-left:5%;
+}
+
 .entry-footer {
 	padding:0 2%;
 	width:90%;
