--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -24,7 +24,7 @@
 
 .post {
 	margin-top: 3em;
-	margin-bottom: 10em;
+	margin-bottom: 3em;
     border-bottom: 1px solid $color__camellia_secondary;
     padding-bottom: 5em;
 }
